# Osprey

./: .env  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  NOTICE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  setup.py
backend/: Dockerfile  requirements.txt  run.sh
backend/app/: app.py  main.py  models.py
backend/app/core/: context.py
client/: base_client.py
deepstream/: deepstream.py
deepstream/app/: deepstream.py  deepstream_det_and_seg.py  jpeg_encoder.cpp  source_bin_factory.py  spotmanager.py  utils.py
deepstream/config/: config_infer_primary_yolo11.txt  config_pgie_yolo_detct.txt  config_pgie_yolo_seg.txt  labels_det.txt  labels_seg.txt
deepstream/messaging/: rabbitmq.py
docker_image/: Dockerfile  compile_nvdsinfer_yolo.sh  run.sh
docs/architecture/: arch.md
docs/concepts/: deepstream-pipeline.md  ipc-unix-sockets.md  overview.md  stream-lifecycle.md  tensorrt-engines.md  two-container-model.md  two-process-model.md
docs/guides/: building-apps.md  engine-builder.md  metadata-guide.md  metadata-structs-visual.md  tracker-implementation.md  tracking-implementation.md
docs/server/: element-factory.md  fastapi-lifespan-startup.md  pydantic-settings-config.md
examples/: gie.txt  make_gie_config.py  vehicle_counter.py
server/backend/: requirements.txt
server/backend/app/: app.py
server/deepstream/app/: build_engines.py  deepstream.py  source_bin_factory.py  utils.py
server/deepstream/config/: README.md  config_pgie_rtdetr_l.txt  config_pgie_yolo_detct.txt  config_pgie_yolo_seg.txt  config_tracker_NvDCF_perf.yml  config_tracker_NvSORT.yml
server/deepstream/models/: README.md
src/osprey/: __init__.py  bootstrap.py  doctor.py  paths.py
src/osprey/_bootstrap/: 00_system_deps.sh  10_cuda_trt_cudnn.sh  20_deepstream_sdk.sh  30_pyds.sh  40_native_libs.sh  __init__.py  bootstrap.sh
src/osprey/server/: app.py  (+2 more)
tools/ultralytics/: README.md
(+24 files in other folders)
